test/ui/tests/name-resolution/exposure/undefined-exposure-reach.stderr
error[E021]: binding `who-am-i` is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/exposure/undefined-exposure-reach.lushui:4:10
  |
4 | @(public who-am-i)
  |          ^^^^^^^^ 
  |

error[E021]: binding `who-am-i` is not defined in module `topmost.namespaced`
 --> ${TEST_FOLDER}/name-resolution/exposure/undefined-exposure-reach.lushui:7:21
  |
7 | @(public namespaced.who-am-i)
  |                     ^^^^^^^^ 
  |

error[E021]: binding `void` is not defined in module `topmost.namespaced`
  --> ${TEST_FOLDER}/name-resolution/exposure/undefined-exposure-reach.lushui:12:17
   |
12 | @(public indir2.void)
   |                 ^^^^ 
   |

error[E021]: binding `emptiness` is not defined in module `topmost.namespaced`
  --> ${TEST_FOLDER}/name-resolution/exposure/undefined-exposure-reach.lushui:20:22
   |
20 | @(public self.indir2.emptiness)
   |                      ^^^^^^^^^ 
   |

error: aborting due to 4 previous errors
 note: the error E021 has a detailed explanation
 help: run `lushui explain E021` to view it

